@@ -571,12 +571,10 @@ STARTMOVE=100
 DEFCMDTIME=0.15
 DEFCOMCMDTIME=1.0
 
-# EQVIEW determines how players equipment is seen by themselves and others.
-# DEFAULT    Equipment is listed by wear location for all involved.
-# MIXED      Equipment is listed by wear location for yourself, and seen 
-#            in paragraph form by others.
-# PARAGRAPH  Equipment is always seen in paragraph form.
-EQVIEW=DEFAULT
+# AWARERANGE determines whether the auto-mapping system is enabled.  If this
+# value is greater than 0, it represents the size of the map shown.
+# Default is 0.
+AWARERANGE=0
 
 # EXVIEW determines how exits are seen by users
 # DEFAULT    Exits are seen as a list of exit names and room titles, unless BRIEF on
