@@ -56,7 +56,7 @@ import java.sql.*;
 public class MUD extends Thread implements MudHost
 {
     private static final float 		HOST_VERSION_MAJOR=(float)5.7;
-    private static final long  		HOST_VERSION_MINOR=0;
+    private static final long  		HOST_VERSION_MINOR=1;
     
     private final static String[]   STATE_STRING={"waiting","accepting","allowing"};
 
