@@ -757,6 +757,13 @@
 		<FONT COLOR=WHITE>@INIValue?MASK=EXVIEW&INIHELP@
 		</TD></TR>
 		
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>AWARERANGE</FONT>
+		</TD><TD WIDTH=80% VALIGN=TOP>
+		<INPUT TYPE=TEXT NAME=AWARERANGE SIZE=20 VALUE="@INIValue?MASK=AWARERANGE&VALUE@">
+		<BR>
+		<FONT COLOR=WHITE>@INIValue?MASK=EQVIEW&INIHELP@
+		</TD></TR>
+		
 		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>INTRODUCTIONSYSTEM</FONT>
 		</TD><TD WIDTH=80% VALIGN=TOP>
 		<INPUT TYPE=TEXT NAME=INTRODUCTIONSYSTEM SIZE=20 VALUE="@INIValue?MASK=INTRODUCTIONSYSTEM&VALUE@">
